--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <h1>Hello all!</h1>
       <p>
         My name is Kelsey Flynn. I am a <span>web</span> developer from Canada.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sit amet gravida ipsum, id feugiat orci. Sed
-        consequat metus sed convallis dapibus. Etiam lacinia felis nec mauris aliquet vulputate dignissim eu mauris. Maecenas
+        I do actually need to write something in here at some point, consectetur adipiscing elit. Vestibulum sit amet gravida ipsum, 
+        id feugiat orci. Sed consequat metus sed convallis dapibus. Etiam lacinia felis nec mauris aliquet vulputate dignissim eu mauris. Maecenas
         tempor rutrum urna, suscipit volutpat nunc sagittis quis. Pellentesque id ante non quam sodales cursus sit amet non
         nibh. Donec mattis venenatis consectetur. Vestibulum eget eros nisi. Mauris a neque aliquam, elementum justo ac,
         tincidunt lacus. Sed eget erat justo.
