--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>Scavenger Development</title>
+    <title>Contact Kelsey Flynn</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="Shortcut Raccoon Icon"
