placeholder to content change
Replaced lorem ipsum with real content on index.html file.
linked github and linkedin URLs in h1 and footer.

--- a/index.html
+++ b/index.html
@@ -38,34 +38,34 @@
       <img src="img/Kelsey Selfie Square.jpg" alt="Kelsey Flynn Portrait" class="profile_portrait" />
       <h1>Hello all!</h1>
       <p>
-        My name is Kelsey Flynn. I am a <span>web</span> developer from Canada.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sit amet gravida ipsum, id feugiat orci. Sed
-        consequat metus sed convallis dapibus. Etiam lacinia felis nec mauris aliquet vulputate dignissim eu mauris. Maecenas
-        tempor rutrum urna, suscipit volutpat nunc sagittis quis. Pellentesque id ante non quam sodales cursus sit amet non
-        nibh. Donec mattis venenatis consectetur. Vestibulum eget eros nisi. Mauris a neque aliquam, elementum justo ac,
-        tincidunt lacus. Sed eget erat justo.
+        My name is Kelsey Flynn, I'm a web developer from Canada. I continuously seek to be a "Jack-of-all-trades",
+        pulling bits of expertise from other fields, always searching for a new skill to add to my repository of knowledge. 
+        Speaking of repositories, <span><a href="https://github.com/KSFlynn007" target="_blank">check out some of my work!</a></span>
       </p>
-      <div class="work-link"><a href="#">Check out some of my work!</a></div> <br>
     </main>
     <footer class="page-footer">
       <p class="social-media_welcome">Find me on:</p>
       <div class="social-media">
         <!--Github Icon-->
-        <img src="img/Github_icon.svg" width="30px" height="30px" alt="Github Logo" />
-        <!--Twitter Icon-->
-        <img
-          src="img/twitter_icon.svg"
-          width="30px"
-          height="30px"
-          alt="Twitter Logo"
-        />
+        <span>
+          <a class="github" href="https://github.com/KSFlynn007" target="_blank">
+            <img src="img/Github_icon.svg" 
+            width="30px" 
+            height="30px" 
+            alt="Github Logo" />
+          </a>
+        </span>
         <!--Linkedin icon-->
-        <img
-          src="img/LinkedIn_icon.svg"
-          width="30px"
-          height="30px"
-          alt="LinkedIn Logo"
-        />
+        <span>
+          <a class="LinkedIn" href="https://www.linkedin.com/in/kelsey-flynn-429464a6/" target="_blank">
+            <img
+              src="img/LinkedIn_icon.svg"
+              width="30px"
+              height="30px"
+              alt="LinkedIn Logo"
+            />
+          </a>
+        </span>
       </div>
     </footer>
    <script src="js/tota11y.min.js"></script>
