Contact page footer links added
If applied, this commit will have updated the placeholder logos in the footer of contact.html to include real URLs to Github and LinkedIn pages on contact.html file.

--- a/contact.html
+++ b/contact.html
@@ -69,15 +69,21 @@
         <input class="submit-button" type="submit" value="Send It!">
       </form>
     </main>
-    <footer class="page-footer">
+  <footer class="page-footer">
       <p class="social-media_welcome">Find me on:</p>
       <div class="social-media">
         <!--Github Icon-->
-        <img src="img/Github_icon.svg" width="30px" height="30px" alt="Github Logo" />
-        <!--Twitter Icon-->
-        <img src="img/twitter_icon.svg" width="30px" height="30px" alt="Twitter Logo" />
+        <span>
+          <a class="github" href="https://github.com/KSFlynn007" target="_blank">
+            <img src="img/Github_icon.svg" width="30px" height="30px" alt="Github Logo" />
+          </a>
+        </span>
         <!--Linkedin icon-->
-        <img src="img/LinkedIn_icon.svg" width="30px" height="30px" alt="LinkedIn Logo" />
+        <span>
+          <a class="LinkedIn" href="https://www.linkedin.com/in/kelsey-flynn-429464a6/" target="_blank">
+            <img src="img/LinkedIn_icon.svg" width="30px" height="30px" alt="LinkedIn Logo" />
+          </a>
+        </span>
       </div>
     </footer>
       <script src="js/tota11y.min.js"></script>
