Footer links added & placeholders removed for content
If applied, this commit will have updated the placeholder logos in the footer of about.html to include real URLs to Github and LinkedIn pages on contact.html file.

If applied, this commit will have updated the content of the description, no formatting changes, only text within table and h1.

--- a/about.html
+++ b/about.html
@@ -38,23 +38,30 @@
       <h1>About Me</h1>
       <p>
         If you didn't catch it from up top, my name is Kelsey Flynn, and I'm a new web developer based out of Alberta, Canada.
-        <br>
-        I enjoy being a "Jack of all Trades" in any situation, and I look forward to adding some coding prowess to my list of skills! <br> <br>
+        <br> 
+		With a Bachelor's degree in Linguistics & Business, I've used it to teach remedial education in person at home in Alberta, privately in France
+		and remotely in China. I've also done my tidbit of time in the corporate world, in HR/Compliance working with provincial and municipal agencies.
+		<br>
+		I spend a lot of my free time scavenging through thrift stores for hidden gems, which often has people drawing raccoon comparisons!
+		<br>
+		Having to think outside the norm, work within the system and organize the chaos in the difference is something I've been doing for years, and web development
+		taps into that combination of skills. 
+		<br>
         <table>
           <thead>
             <tr>
               <th>Skills</th>
-              <th>Level of Expertise</th>
+              <th>Level of Expertise (so far)</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>HTML</td>
-              <td>Advanced</td>
+              <td>Beginner</td>
             </tr>
             <tr>
               <td>CSS</td>
-              <td>Intermediate</td>
+              <td>Beginner</td>
             </tr>
             <tr>
               <td>JavaScript</td>
@@ -324,17 +331,23 @@
         </svg>
         <a class="source" target="_blank" href="https://www.vecteezy.com/free-vector/mountain-road">Mountain Road Vectors by Vecteezy</a>
       </main>
-    <footer class="page-footer">
-      <p class="social-media_welcome">Find me on:</p>
-      <div class="social-media">
-        <!--Github Icon-->
-        <img src="img/Github_icon.svg" width="30px" height="30px" alt="Github Logo" />
-        <!--Twitter Icon-->
-        <img src="img/twitter_icon.svg" width="30px" height="30px" alt="Twitter Logo" />
-        <!--Linkedin icon-->
-        <img src="img/LinkedIn_icon.svg" width="30px" height="30px" alt="LinkedIn Logo" />
-      </div>
-    </footer>
+	<footer class="page-footer">
+		<p class="social-media_welcome">Find me on:</p>
+		<div class="social-media">
+			<!--Github Icon-->
+			<span>
+				<a class="github" href="https://github.com/KSFlynn007" target="_blank">
+					<img src="img/Github_icon.svg" width="30px" height="30px" alt="Github Logo" />
+				</a>
+			</span>
+			<!--Linkedin icon-->
+			<span>
+				<a class="LinkedIn" href="https://www.linkedin.com/in/kelsey-flynn-429464a6/" target="_blank">
+					<img src="img/LinkedIn_icon.svg" width="30px" height="30px" alt="LinkedIn Logo" />
+				</a>
+			</span>
+		</div>
+	</footer>
     <script src="js/tota11y.min.js"></script>
   </body>
 </html>
