--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <title>Scavenger Development</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="Shortcut Raccoon Icon"
-      href="img/racoon favicon.svg" />
+    <link rel="Shortcut Raccoon Icon" 
+    href="img/racoon_favicon.svg"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link
       href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap"
       rel="stylesheet">
       
-    <link rel="stylesheet" type="text/css" href="css/style-grid.production.css">
+    <link rel="stylesheet" type="text/css" href="css/style-grid.css">
   </head>
   <body>
     <header class="page-header">
-      <img src="img/Kelsey Logo 3.png" alt="Logo" class="page-header_item" class="logo-image" height= 75px width= auto;/>
+      <img src="img/kelsey_logo_3.png" alt="Logo" class="page-header_item" height= "75"/>
       <nav class="main-navigation page-header_item">
         <ul role="menubar" class="navigation-list">
           <li role="presentation">
@@ -35,7 +35,7 @@
     </header>
     <hr>
     <main class="profile">
-      <img src="img/Kelsey Selfie Square.jpg" alt="Kelsey Flynn Portrait" class="profile_portrait" />
+      <img src="img/kelsey_selfie_square.jpg" alt="Kelsey Flynn Portrait" class="profile_portrait" />
       <h1>Hello all!</h1>
       <p>
         My name is Kelsey Flynn, I'm a web developer from Canada. I continuously seek to be a "Jack-of-all-trades",
@@ -50,8 +50,8 @@
         <span>
           <a class="github" href="https://github.com/KSFlynn007" target="_blank">
             <img src="img/Github_icon.svg" 
-            width="30px" 
-            height="30px" 
+            width="30" 
+            height="30" 
             alt="Github Logo" />
           </a>
         </span>
@@ -60,8 +60,8 @@
           <a class="LinkedIn" href="https://www.linkedin.com/in/kelsey-flynn-429464a6/" target="_blank">
             <img
               src="img/LinkedIn_icon.svg"
-              width="30px"
-              height="30px"
+              width="30"
+              height="30"
               alt="LinkedIn Logo"
             />
           </a>
