--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="Shortcut Raccoon Icon"
-      href="img/racoon favicon.svg" />
+      href="img/racoon_favicon.svg" />
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link
       href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap"
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="page-header">
-      <img src="img/Kelsey Logo 3.png" alt="Logo" class="page-header_item" class="logo-image" height=75px width=auto; />
+      <img src="img/kelsey_logo_3.png" alt="Logo" class="page-header_item" height=75 />
       <nav class="main-navigation page-header_item">
         <ul role="menubar" class="navigation-list">
           <li role="presentation">
@@ -75,13 +75,13 @@
         <!--Github Icon-->
         <span>
           <a class="github" href="https://github.com/KSFlynn007" target="_blank">
-            <img src="img/Github_icon.svg" width="30px" height="30px" alt="Github Logo" />
+            <img src="img/Github_icon.svg" width="30" height="30" alt="Github Logo" />
           </a>
         </span>
         <!--Linkedin icon-->
         <span>
           <a class="LinkedIn" href="https://www.linkedin.com/in/kelsey-flynn-429464a6/" target="_blank">
-            <img src="img/LinkedIn_icon.svg" width="30px" height="30px" alt="LinkedIn Logo" />
+            <img src="img/LinkedIn_icon.svg" width="30" height="30" alt="LinkedIn Logo" />
           </a>
         </span>
       </div>
