Update contact form
Removed "action" attribute from contact form, as there is no relative or absolute pathway yet to link to.

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
         <a href="mailto:kelseyflynnn@gmail.com">Contact me!</a>
       </p>
       <br>
-      <form action="" method="post" id="contact-form">
+      <form method="post" id="contact-form">
         <label class="standard-label" for="your-name">Your Name: </label>
         <input id="your-name" required>
         <br> <br>
