--- a/work.html
+++ b/work.html
@@ -42,13 +42,13 @@
             <div class="grid_item">
                 <h2>Portfolio</h2>
                 <p>Within this project *you are here), I was responsible for front-end dev. It's written in HTML, CSS with CSS functions.</p>
-                <a href="https://github.com/KSFlynn007/portfolio-website">See my project on Github!</a>
+                <a href="https://github.com/KSFlynn007/portfolio-website" target="_blank">See my project on Github!</a>
             </div>
             <div class="grid_item">
                 <h2>Nurses 💖 Deliveries</h2>
                 <p>My first coding piece, a prototype of a donation-based delivery service for healthcare workers.
                      It's written in HTML, and simple CSS & Javascript tags within.</p>
-                <a href="https://github.com/KSFlynn007/First-Project">See my project on Github!</a>
+                <a href="https://github.com/KSFlynn007/First-Project" target="_blank">See my project on Github!</a>
             </div>
             
             <div class="grid_item">
