--- a/work.html
+++ b/work.html
@@ -40,13 +40,13 @@
         <div class="grid">
         <!--Grid items will be here-->
             <div class="grid_item">
-                <h2>Portfolio</h2>
-                <p>Within this project *you are here), I was responsible for front-end dev. It's written in HTML, CSS with CSS functions.</p>
+                <h2>Portfolio <br> (You are here)</h2>
+                <p>I was responsible for front-end dev. It's written in HTML, CSS with CSS functions.</p>
                 <a href="https://github.com/KSFlynn007/portfolio-website" target="_blank">See my project on Github!</a>
             </div>
             <div class="grid_item">
                 <h2>Nurses 💖 Deliveries</h2>
-                <p>My first coding piece, a prototype of a donation-based delivery service for healthcare workers.
+                <p>My first coding work, a prototype of a donation-based delivery service for healthcare workers.
                      It's written in HTML, and simple CSS & Javascript tags within.</p>
                 <a href="https://github.com/KSFlynn007/First-Project" target="_blank">See my project on Github!</a>
             </div>
