--- a/about.html
+++ b/about.html
@@ -13,26 +13,25 @@
     <link rel="stylesheet" type="text/css" href="css/style-grid.css">
   </head>
   <body>
-    <header class="page-header">
-      <img src="img/kelsey_logo_3.png" alt="Logo" class="page-header_item" height=75 />
-      <nav class="main-navigation page-header_item">
-        <ul role="menubar" class="navigation-list">
-          <li role="presentation">
-            <a href="index.html" target="_self" role="menuitem"
-              class="navigation-list_item navigation-list--active">Home</a>
-          </li>
-          <li role="presentation">
-            <a href="about.html" target="_self" role="menuitem" class="navigation-list_item">About Me</a>
-          </li>
-          <li>
-            <a href="work.html" target="_self" role="menuitem" class="navigation-list_item">Projects</a>
-          </li>
-          <li role="presentation">
-            <a href="contact.html" target="_self" role="menuitem" class="navigation-list_item">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+	<header class="page-header">
+		<img src="img/kelsey_logo_3.png" alt="Logo" class="logo-image" height="75" />
+		<nav>
+			<ul role="menubar" class="navigation-list">
+				<li role="presentation">
+					<a href="index.html" target="_self" role="menuitem" class="navigation-list_item">Home</a>
+				</li>
+				<li role="presentation">
+					<a href="about.html" target="_self" role="menuitem" class="navigation-list_item">About Me</a>
+				</li>
+				<li>
+					<a href="work.html" target="_self" role="menuitem" class="navigation-list_item">Projects</a>
+				</li>
+				<li role="presentation">
+					<a href="contact.html" target="_self" role="menuitem" class="navigation-list_item">Contact</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
     <hr>
     <main class="about-me">
       <h1>About Me</h1>
