--- a/work.html
+++ b/work.html
@@ -14,12 +14,11 @@
 </head>
 <body>
     <header class="page-header">
-    <img src="img/kelsey_logo_3.png" alt="Logo" class="page-header_item" height=75 />
-        <nav class="main-navigation page-header_item">
+        <img src="img/kelsey_logo_3.png" alt="Logo" class="logo-image" height="75" />
+        <nav>
             <ul role="menubar" class="navigation-list">
                 <li role="presentation">
-                    <a href="index.html" target="_self" role="menuitem"
-                        class="navigation-list_item navigation-list--active">Home</a>
+                    <a href="index.html" target="_self" role="menuitem" class="navigation-list_item">Home</a>
                 </li>
                 <li role="presentation">
                     <a href="about.html" target="_self" role="menuitem" class="navigation-list_item">About Me</a>
