--- a/about.html
+++ b/about.html
@@ -10,11 +10,12 @@
     <link
       href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap"
       rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style-grid.production.css">
+    <link rel="stylesheet" type="text/css" href="css/style-grid.css">
   </head>
   <body>
 	<header class="page-header">
-		<img src="img/kelsey_logo_3.png" alt="Logo" class="logo-image" height="75" />
+		<span><a target="_self" href="index.html"><img src="img/kelsey_logo_3.png" alt="Logo" class="logo-image"
+					height="75" /></a></span>
 		<nav>
 			<ul role="menubar" class="navigation-list">
 				<li role="presentation">
@@ -32,20 +33,21 @@
 			</ul>
 		</nav>
 	</header>
+
     <hr>
     <main class="about-me">
       <h1>About Me</h1>
       <p>
         If you didn't catch it from up top, my name is Kelsey Flynn, and I'm a new web developer based out of Alberta, Canada.
-        <br> 
+        <br /> 
 		With a Bachelor's degree in Linguistics & Business, I've used it to teach remedial education in person at home in Alberta, privately in France
 		and remotely in China. I've also done my tidbit of time in the corporate world, in HR/Compliance working with provincial and municipal agencies.
-		<br>
+		<br />
 		I spend a lot of my free time scavenging through thrift stores for hidden gems, which often has people drawing raccoon comparisons!
-		<br>
+		<br />
 		Having to think outside the norm, work within the system and organize the chaos in the difference is something I've been doing for years, and web development
 		taps into that combination of skills. 
-		<br>
+		<br />
         <table>
           <thead>
             <tr>
@@ -69,7 +71,7 @@
           </tbody>
         </table>
         <div class="cv-button_container">
-        <a href="files/kelsey-flynn_summary.pdf" class="cv-button" target="_blank" download>Download my CV</a> <br> <br>
+        <a href="files/kelsey-flynn_summary.pdf" class="cv-button" target="_blank" download>Download my CV</a> <br /> <br />
         </div>
           <!--MOUNTAIN PICTURE BELOW-->
         <!-- Generator: Adobe Illustrator 17.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
