--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap"
       rel="stylesheet">
       
-    <link rel="stylesheet" type="text/css" href="css/style-grid.production.css">
+    <link rel="stylesheet" type="text/css" href="css/style-grid.css">
   </head>
   <body>
     <header class="page-header">
-      <img src="img/kelsey_logo_3.png" alt="Logo" class="logo-image" height= "75"/>
+      <span><a target="_self" href="index.html"><img src="img/kelsey_logo_3.png" alt="Logo" class="logo-image" height= "75"/></a></span>
       <nav>
         <ul role="menubar" class="navigation-list">
           <li role="presentation">
