Removed all <br> tags
If commited, this will have no affect visually, but in better practice remove <br> tags and instead format the new <span> elements in CSS to simulate spacing.

--- a/about.html
+++ b/about.html
@@ -36,16 +36,12 @@
     <main class="about-me">
       <h1>About Me</h1>
       <p>
-        If you didn't catch it from up top, my name is Kelsey Flynn, and I'm a new web developer based out of Alberta, Canada.
-        <br /> 
-		With a Bachelor's degree in Linguistics & Business, I've used it to teach remedial education in person at home in Alberta, privately in France
-		and remotely in China. I've also done my tidbit of time in the corporate world, in HR/Compliance working with provincial and municipal agencies.
-		<br />
-		I spend a lot of my free time scavenging through thrift stores for hidden gems, which often has people drawing raccoon comparisons!
-		<br />
-		Having to think outside the norm, work within the system and organize the chaos in the difference is something I've been doing for years, and web development
-		taps into that combination of skills. 
-		<br />
+        <span class="bio">If you didn't catch it from up top, my name is Kelsey Flynn, and I'm a new web developer based out of Alberta, Canada.</span>
+		<span class="bio">With a Bachelor's degree in Linguistics & Business, I've used it to teach remedial education in person at home in Alberta, privately in France
+		and remotely in China. I've also done my tidbit of time in the corporate world, in HR/Compliance working with provincial and municipal agencies.</span>
+		<span class="bio">I spend a lot of my free time scavenging through thrift stores for hidden gems, which often has people drawing raccoon comparisons!</span>
+		<span class="bio">I like to think outside the norm, work within the system and organize the chaos in the difference is something I've been doing for years, and web development
+		taps into that combination of skills.</span>
         <table>
           <thead>
             <tr>
@@ -69,7 +65,7 @@
           </tbody>
         </table>
         <div class="cv-button_container">
-        <a href="files/kelsey-flynn_summary.pdf" class="cv-button" target="_blank" download>Download my CV</a> <br /> <br />
+        <a href="files/kelsey-flynn_summary.pdf" class="cv-button" target="_blank" download>Download my CV</a>
         </div>
           <!--MOUNTAIN PICTURE BELOW-->
         <!-- Generator: Adobe Illustrator 17.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
