--- a/work.html
+++ b/work.html
@@ -39,7 +39,7 @@
         <div class="grid">
         <!--Grid items will be here-->
             <div class="grid_item">
-                <h2>Portfolio <br /> (You are here)</h2>
+                <h2>Portfolio (You are here)</h2>
                 <p>I was responsible for front-end dev. It's written in HTML, CSS with CSS functions.</p>
                 <a href="https://github.com/KSFlynn007/portfolio-website" target="_blank">See my project on Github!</a>
             </div>
