--- a/work.html
+++ b/work.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Scavenger Development Projects</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="Shortcut Raccoon Icon"
-        href="img/racoon_favicon.svg" />
+    <link rel="Shortcut Raccoon Icon" href="img/racoon_favicon.svg" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link
         href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style-grid.production.css">
 </head>
+
 <body>
     <header class="page-header">
         <span><a target="_self" href="index.html"><img src="img/kelsey_logo_3.png" alt="Logo" class="logo-image"
@@ -37,7 +38,7 @@
     <section>
         <h1>Previous Projects</h1>
         <div class="grid">
-        <!--Grid items will be here-->
+            <!--Grid items will be here-->
             <div class="grid_item">
                 <h2>Portfolio (You are here)</h2>
                 <p>I was responsible for front-end dev. It's written in HTML, CSS with CSS functions.</p>
@@ -46,16 +47,18 @@
             <div class="grid_item">
                 <h2>Nurses 💖 Deliveries</h2>
                 <p>My first coding work, a prototype of a donation-based delivery service for healthcare workers.
-                     It's written in HTML, and simple CSS & Javascript tags within.</p>
+                    It's written in HTML, and simple CSS & Javascript tags within.</p>
                 <a href="https://github.com/KSFlynn007/First-Project" target="_blank">See my project on Github!</a>
             </div>
-            
+
             <div class="grid_item">
-                <h2>Project Alpha</h2>
-                <p>Within this project, I was responsible for everything, all mistakes are my own. It's written in gibberish.</p>
-                <a href="#">See my project on Github!</a>
+                <h2>Creature Hub</h2>
+                <p>First foray into JavaScript and back-end development, a simple app that fetches from an API to
+                    display a
+                    collection.</p>
+                <a href="https://github.com/KSFlynn007/creature-hub" target="_blank">See my project on Github!</a>
             </div>
-            
+
         </div>
     </section>
     <footer class="page-footer">
