--- a/work.html
+++ b/work.html
@@ -47,15 +47,18 @@
             <div class="grid_item">
                 <h2>Nurses 💖 Deliveries</h2>
                 <p>My first coding work, a prototype of a donation-based delivery service for healthcare workers.
-                    It's written in HTML, and simple CSS & Javascript tags within.</p>
+                    It's written in HTML, and simple CSS & Javascript tags within.
+                </p>
                 <a href="https://github.com/KSFlynn007/First-Project" target="_blank">See my project on Github!</a>
             </div>
+
             <div class="grid_item">
                 <h2>Creature Hub</h2>
                 <p>First foray into JavaScript and back-end development, a simple app that fetches from an API to
                     display a collection.</p>
                 <a href="https://github.com/KSFlynn007/creature-hub" target="_blank">See my project on Github!</a>
             </div>
+
             <div class="grid_item">
                 <h2>To-Do List App</h2>
                 <p>jQuery mini-project, used to display knowledge in JavaScript libraries.</p>
