--- a/work.html
+++ b/work.html
@@ -69,6 +69,14 @@
                     project on Github!</a>
             </div>
 
+            <div class="grid_item">
+                <h2>myFlixDB</h2>
+                <p>Server-Side Node.js & Express project, a no-SQL database created for a film app that accesses and operates CRUD on movies and user data through various endpoints.
+                    Hosted on Heroku, includes various security measures, incl. authorization, JWT authentication and hashing of sensitive information.
+                </p>
+                <a id="project-link5" href="https://github.com/KSFlynn007/movie_api" target="_blank">See my project on Github!</a>
+            </div>
+
         </div>
     </section>
     <footer class="page-footer">
