--- a/about.html
+++ b/about.html
@@ -36,11 +36,11 @@
     <main class="about-me">
       <h1>About Me</h1>
       <p>
-        <span class="bio">If you didn't catch it from up top, my name is Kelsey Flynn, and I'm a new web developer based out of Alberta, Canada.</span>
+        <span class="bio">If you didn't catch it from up top, my name is Kelsey Flynn, and I'm a web developer based out of Alberta, Canada.</span>
 		<span class="bio">With a Bachelor's degree in Linguistics & Business, I've used it to teach remedial education in person at home in Alberta, privately in France
-		and remotely in China. I've also done my tidbit of time in the corporate world, in HR/Compliance working with provincial and municipal agencies.</span>
+		and remotely in China. I've also done my tidbit of time in the corporate world, in HR & Compliance working with provincial and municipal agencies.</span>
 		<span class="bio">I spend a lot of my free time scavenging through thrift stores for hidden gems, which often has people drawing raccoon comparisons!</span>
-		<span class="bio">I like to think outside the norm, work within the system and organize the chaos in the difference is something I've been doing for years, and web development
+	<span class="bio">Thinking outside the norm, working within the system and organizing the chaos in the difference is something I've been doing for years, and web development
 		taps into that combination of skills.</span>
         <table>
           <thead>
