--- a/work.html
+++ b/work.html
@@ -70,11 +70,19 @@
             </div>
 
             <div class="grid_item">
-                <h2>myFlixDB</h2>
-                <p>Server-Side Node.js & Express project, a no-SQL database created for a film app that accesses and operates CRUD on movies and user data through various endpoints.
-                    Hosted on Heroku, includes various security measures, incl. authorization, JWT authentication and hashing of sensitive information.
+                <h2>myFlix DB</h2>
+                <p>Server-Side no-SQL databse created with Node.js & Express that performs CRUD on movies and user data through various endpoints.
+                    Security measures such as authorization, JWT authentication and password hashing used. Hosted on Heroku.
                 </p>
                 <a id="project-link5" href="https://github.com/KSFlynn007/movie_api" target="_blank">See my project on Github!</a>
+            </div>
+
+            <div class="grid_item">
+                <h2>myFlix</h2>
+                <p>Client-side application for myFlixDB, created with React & Redux with both class and functional components. Styling done 
+                    with React Bootstrap and hosted on Netlify.
+                     </p>
+                <a id="project-link4" href="https://github.com/KSFlynn007/myFlix-client" target="_blank">See my project on Github!</a>
             </div>
 
         </div>
