--- a/work.html
+++ b/work.html
@@ -82,8 +82,18 @@
                 <p>Client-side application for myFlixDB, created with React & Redux with both class and functional components. Styling done 
                     with React Bootstrap and hosted on Netlify.
                      </p>
-                <a id="project-link4" href="https://github.com/KSFlynn007/myFlix-client" target="_blank">See my project on Github!</a>
+                <a id="project-link6" href="https://github.com/KSFlynn007/myFlix-client" target="_blank">See my project on Github!</a>
             </div>
+
+            <div class="grid_item">
+                <h2>Code Club</h2>
+                <p>A Progressive Web Application, developed with TDD, built with React, run on AWS Lambda (serverless). Uses Google Calendar API and OAuth2 authentication
+                    flow to fetch upcominge events in a example event calendar. Code Club has alerts created with the OOP paradigm & uses Recharts for data visualization.
+                </p>
+                <a id="project-link7" href="https://github.com/KSFlynn007/meet-app" target="_blank">See my project on
+                    Github!</a>
+            </div>
+
 
         </div>
     </section>
