linkedin URL update

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </span>
         <!--Linkedin icon-->
         <span>
-          <a class="LinkedIn" href="https://www.linkedin.com/in/kelsey-flynn-429464a6/" target="_blank">
+          <a class="LinkedIn" href="https://www.linkedin.com/in/kelseysflynn/" target="_blank">
             <img
               src="img/LinkedIn_icon.svg"
               width="30"
