--- a/work.html
+++ b/work.html
@@ -94,7 +94,7 @@
                     Github!</a>
             </div>
 
-
+l
         </div>
     </section>
     <footer class="page-footer">
@@ -108,7 +108,7 @@
             </span>
             <!--Linkedin icon-->
             <span>
-                <a class="LinkedIn" href="https://www.linkedin.com/in/kelsey-flynn-429464a6/" target="_blank">
+                <a class="LinkedIn" href="https://www.linkedin.com/in/kelseysflynn/" target="_blank">
                     <img src="img/LinkedIn_icon.svg" width="30" height="30" alt="LinkedIn Logo" />
                 </a>
             </span>
