--- a/about.html
+++ b/about.html
@@ -335,7 +335,7 @@
 			</span>
 			<!--Linkedin icon-->
 			<span>
-				<a class="LinkedIn" href="https://www.linkedin.com/in/kelsey-flynn-429464a6/" target="_blank">
+				<a class="LinkedIn" href="https://www.linkedin.com/in/kelseysflynn/" target="_blank">
 					<img src="img/LinkedIn_icon.svg" width="30" height="30" alt="LinkedIn Logo" />
 				</a>
 			</span>
